--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-vanilla-tilt": "^1.0.0",
     "three": "^0.127.0",
     "vanilla-tilt": "^1.7.0",
     "web-vitals": "^1.1.1"
